# ship_segmentation_test_task

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: model_train.ipynb
samples/baseline/tf_logs/: events.out.tfevents.1707310987.624da07e9666.34.6  events.out.tfevents.1707313997.624da07e9666.34.7
ship_segmentation/scripts/: predict.py  train.py
src/ship_segmentation/data/: dataset.py  utils.py
src/ship_segmentation/losses/: dice_loss.py
src/ship_segmentation/models/: blocks.py  unet.py
src/ship_segmentation/scripts/: predict.py  train.py
